# toucan-camera-server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  build.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: androidBumpVersion.js  build.yml
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/brickfilms/toucancameraserver/: CameraServerService.kt  MainActivity.kt
android/app/src/main/java/com/brickfilms/toucancameraserver/ui/: ToucanLogoIcon.kt
android/app/src/main/java/com/brickfilms/toucancameraserver/ui/server/: ServerScreen.kt  ServerUiState.kt
android/app/src/main/java/com/brickfilms/toucancameraserver/ui/server/components/: AddressCard.kt  PowerButton.kt  StatsStrip.kt  StatusHeader.kt  TokenCard.kt
android/app/src/main/java/com/brickfilms/toucancameraserver/ui/theme/: Color.kt  ToucanTheme.kt  Type.kt
android/app/src/main/java/com/example/birdcamera/: CameraServerService.kt  MainActivity.kt
android/app/src/main/res/drawable/: logo_toucan.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
docs/: remote-camera-protocol.md
docs/compatibility/: canon.jsonl  gphoto2.jsonl  nikon.jsonl  remote.jsonl  sony.jsonl  webcams.jsonl
examples/: iso-probe.rs
packaging/linux/: 99-toucan-camera.rules  install.sh
scripts/: build-libgphoto2.sh  macos-bundle-gphoto2.sh  stage-sony-crsdk.sh
src/: auth.rs  dynlib.rs  lib.rs  main.rs  peers.rs  shutdown.rs
src/backends/: lazy.rs  mod.rs
src/backends/camera2_android/: bridge.c  bridge.h  mod.rs
src/backends/canon/: mod.rs
src/backends/gphoto2/: mod.rs
src/backends/nikon/: README.md  mod.rs
src/backends/nikon_zs2/: README.md  mod.rs
src/backends/remote/: mod.rs  peers.rs
src/backends/sony/: README.md  bridge.cpp  bridge.h  mod.rs
src/backends/stopmotionstudio/: mod.rs
src/backends/webcam_linux/: mod.rs
src/backends/webcam_macos/: bridge.h  bridge.m  mod.rs
src/backends/webcam_windows/: mod.rs
src/camera/: mod.rs
src/routes/: cameras.rs  mod.rs  peers.rs
static/: index.html
tests/: peers.rs
