[package]
name = "toucan-camera-server"
version = "0.0.12"
edition = "2021"

[lib]
name = "toucan_camera"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "toucan-camera-server"
path = "src/main.rs"

[features]
default = []
# nusb gates SDK init on USB-vendor presence (see src/backends/lazy.rs), so the
# heavy EDSDK is only loaded when a Canon body is actually plugged in.
backend-canon = ["dep:nusb"]
# Nikon Z series 2 bodies via the Nikon Remote SDK (MAID3 CS Layer). macOS +
# Windows; the CS-Layer module is loaded at runtime (dlopen'd CFBundle on macOS,
# LoadLibrary'd ControlServiceLayer.dll on Windows — see src/backends/nikon_zs2/README.md).
# On Linux, Nikon stays on backend-gphoto2. On macOS it coexists with the Canon
# EDSDK because build.rs renames the Nikon driver's clashing ObjC PTP classes
# (no clash on Windows — the driver is a plain DLL, not Objective-C).
backend-nikon-zs2 = ["dep:nusb"]
# Sony bodies via the Sony Camera Remote SDK (CrSDK). Windows / macOS / Linux.
# The SDK is C++ with async callbacks, driven through a C++ shim (bridge.cpp)
# compiled by build.rs; Cr_Core is linked and its runtime libs + CrAdapter/ are
# copied next to the binary. Vendor the SDK under external/SONY/CrSDK/ (see
# src/backends/sony/README.md). nusb gates SDK init on USB-vendor presence (see
# src/backends/lazy.rs), so the CrSDK is only loaded when a Sony body is plugged in.
backend-sony = ["dep:nusb"]
backend-webcam-linux = ["dep:v4l"]
# nusb resolves the real USB vendor of a libgphoto2 device, so gphoto2 can dedup
# cameras owned by a dedicated SDK backend (Canon/Nikon) by USB vendor, not name.
backend-gphoto2 = ["dep:gphoto2", "dep:nusb"]
backend-webcam-macos = []
backend-webcam-windows = ["dep:windows", "dep:windows-core"]
backend-camera2-android = []
# Relays cameras exposed by other toucan-camera-server instances over HTTP.
backend-remote = ["dep:reqwest"]

[dependencies]
axum = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
# HTTP client for the remote backend. No TLS stack: peers are reached over plain
# HTTP on the LAN (the server itself is HTTP-only), keeping the dependency light.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "stream"] }
# Always compiled: the live-view route composites the terminal "end of stream"
# placeholder onto a canvas matching the last real frame's resolution. Several
# backends also use it to encode captured frames to JPEG.
image = { version = "0.25", default-features = false, features = ["jpeg"] }
gphoto2 = { version = "3.4", optional = true }
windows-core = { version = "0.58", optional = true }
windows = { version = "0.58", optional = true, features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media",
    "Win32_Media_MediaFoundation",
    "Win32_Media_DirectShow",
    "Win32_Media_KernelStreaming",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
nusb = { version = "0.2.4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
v4l = { version = "0.14", optional = true }

[build-dependencies]
cc = "1"
winresource = "0.1"

[dev-dependencies]
# `ServiceExt::oneshot` drives the router in-process for integration tests.
tower = { version = "0.5", features = ["util"] }

# Compile all dependencies at opt-level 2 even in debug builds.
# Without this, pure-software codecs (image crate JPEG encoder) run at
# debug speed (~10–100× slower), making live view unusable in dev mode.
[profile.dev.package."*"]
opt-level = 2
